--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^4.6.0",
+    "@emotion/react": "^11.10.8",
+    "@mantine/core": "^6.0.9",
+    "@mantine/dates": "^6.0.9",
+    "@mantine/dropzone": "^6.0.9",
+    "@mantine/form": "^6.0.9",
+    "@mantine/hooks": "^6.0.9",
+    "@mantine/modals": "^6.0.9",
+    "@mantine/notifications": "^6.0.9",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -12,8 +20,11 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "aws-amplify": "^5.1.4",
+    "dayjs": "^1.11.7",
+    "googleapis": "^118.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
