--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -21,6 +21,20 @@
       ],
       "providerPlugin": "awscloudformation",
       "service": "API Gateway"
+    },
+    "CalendarQueries": {
+      "dependsOn": [
+        {
+          "attributes": [
+            "Name",
+            "Arn"
+          ],
+          "category": "function",
+          "resourceName": "CalendarQueries"
+        }
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "API Gateway"
     }
   },
   "auth": {
@@ -83,6 +97,12 @@
       ],
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
+    },
+    "CalendarQueries": {
+      "build": true,
+      "dependsOn": [],
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
     }
   },
   "hosting": {
@@ -105,6 +125,22 @@
         {
           "category": "function",
           "resourceName": "AdminQueries9cf22bb0"
+        }
+      ]
+    },
+    "AMPLIFY_function_CalendarQueries_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "CalendarQueries"
+        }
+      ]
+    },
+    "AMPLIFY_function_CalendarQueries_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "CalendarQueries"
         }
       ]
     },
