Added New Function

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -83,6 +83,11 @@
       ],
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
+    },
+    "CalendarQueries": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
     }
   },
   "hosting": {
