Added Calendar api

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -144,5 +144,55 @@
       "service": "amplifyhosting",
       "type": "cicd"
     }
+  },
+  "parameters": {
+    "AMPLIFY_function_AdminQueries9cf22bb0_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "AdminQueries9cf22bb0"
+        }
+      ]
+    },
+    "AMPLIFY_function_AdminQueries9cf22bb0_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "AdminQueries9cf22bb0"
+        }
+      ]
+    },
+    "AMPLIFY_function_CalendarQueries_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "CalendarQueries"
+        }
+      ]
+    },
+    "AMPLIFY_function_CalendarQueries_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "CalendarQueries"
+        }
+      ]
+    },
+    "AMPLIFY_hosting_amplifyhosting_appId": {
+      "usedBy": [
+        {
+          "category": "hosting",
+          "resourceName": "amplifyhosting"
+        }
+      ]
+    },
+    "AMPLIFY_hosting_amplifyhosting_type": {
+      "usedBy": [
+        {
+          "category": "hosting",
+          "resourceName": "amplifyhosting"
+        }
+      ]
+    }
   }
 }
