Added Calendar Function

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -107,6 +107,11 @@
       ],
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
+    },
+    "CalendarFunction": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
     }
   },
   "hosting": {
@@ -129,6 +134,22 @@
         {
           "category": "function",
           "resourceName": "AdminQueries9cf22bb0"
+        }
+      ]
+    },
+    "AMPLIFY_function_CalendarFunction_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "CalendarFunction"
+        }
+      ]
+    },
+    "AMPLIFY_function_CalendarFunction_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "CalendarFunction"
         }
       ]
     },
