--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "aws-amplify": "^5.1.4",
+    "axios": "^1.4.0",
     "dayjs": "^1.11.7",
     "googleapis": "^118.0.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
