--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^4.6.0",
+    "@aws-amplify/ui-react-storage": "^1.2.0",
     "@emotion/react": "^11.10.8",
     "@mantine/core": "^6.0.9",
     "@mantine/dates": "^6.0.9",
