--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/modals": "^6.0.9",
     "@mantine/notifications": "^6.0.9",
     "@mantine/nprogress": "^6.0.9",
+    "@mantine/prism": "^6.0.10",
     "@tabler/icons-react": "^2.17.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
