--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mantine-datatable": "^2.4.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-calendar-api": "^2.2.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
