--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/modals": "^6.0.9",
     "@mantine/notifications": "^6.0.9",
     "@mantine/nprogress": "^6.0.9",
+    "@react-oauth/google": "^0.11.0",
     "@tabler/icons-react": "^2.17.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -28,12 +29,10 @@
     "aws-amplify": "^5.1.4",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
-    "googleapis": "^118.0.0",
     "jwt-decode": "^3.1.2",
     "mantine-datatable": "^2.4.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-calendar-api": "^2.2.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
