--- a/amplify/backend/function/CalendarFunction/src/package.json
+++ b/amplify/backend/function/CalendarFunction/src/package.json
@@ -9,7 +9,7 @@
     "aws-serverless-express": "^3.3.5",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "node-fetch": "^3.3.1",
+    "node-fetch": "2",
     "rrule": "^2.7.2"
   },
   "devDependencies": {
