--- a/amplify/backend/function/ofsapplication4beb4f4bPostConfirmation/ofsapplication4beb4f4bPostConfirmation-cloudformation-template.json
+++ b/amplify/backend/function/ofsapplication4beb4f4bPostConfirmation/ofsapplication4beb4f4bPostConfirmation-cloudformation-template.json
@@ -2,35 +2,46 @@
   "AWSTemplateFormatVersion": "2010-09-09",
   "Description": "{\"createdOn\":\"Mac\",\"createdBy\":\"Amplify\",\"createdWith\":\"12.0.0\",\"stackType\":\"function-Lambda\",\"metadata\":{}}",
   "Parameters": {
-    "CloudWatchRule": {
+    "GROUP": {
       "Type": "String",
-      "Default": "NONE",
-      "Description": " Schedule Expression"
+      "Default": ""
     },
-    "deploymentBucketName": {
-      "Type": "String"
+    "modules": {
+      "Type": "String",
+      "Default": "",
+      "Description": "Comma-delimited list of modules to be executed by a lambda trigger. Sent to resource as an env variable."
+    },
+    "resourceName": {
+      "Type": "String",
+      "Default": ""
+    },
+    "trigger": {
+      "Type": "String",
+      "Default": "true"
+    },
+    "functionName": {
+      "Type": "String",
+      "Default": ""
+    },
+    "roleName": {
+      "Type": "String",
+      "Default": ""
+    },
+    "parentResource": {
+      "Type": "String",
+      "Default": ""
+    },
+    "parentStack": {
+      "Type": "String",
+      "Default": ""
     },
     "env": {
       "Type": "String"
     },
+    "deploymentBucketName": {
+      "Type": "String"
+    },
     "s3Key": {
-      "Type": "String"
-    },
-    "apiofsapplicationGraphQLAPIIdOutput": {
-      "Type": "String",
-      "Default": "apiofsapplicationGraphQLAPIIdOutput"
-    },
-    "apiofsapplicationGraphQLAPIEndpointOutput": {
-      "Type": "String",
-      "Default": "apiofsapplicationGraphQLAPIEndpointOutput"
-    },
-    "googleClientId": {
-      "Type": "String"
-    },
-    "googleSecret": {
-      "Type": "String"
-    },
-    "redirectUri": {
       "Type": "String"
     }
   },
@@ -52,24 +63,16 @@
         "aws:asset:property": "Code"
       },
       "Properties": {
-        "Code": {
-          "S3Bucket": {
-            "Ref": "deploymentBucketName"
-          },
-          "S3Key": {
-            "Ref": "s3Key"
-          }
-        },
         "Handler": "index.handler",
         "FunctionName": {
           "Fn::If": [
             "ShouldNotCreateEnvResources",
-            "CalendarFunction",
+            "ofsapplication4beb4f4bPostConfirmation",
             {
               "Fn::Join": [
                 "",
                 [
-                  "CalendarFunction",
+                  "ofsapplication4beb4f4bPostConfirmation",
                   "-",
                   {
                     "Ref": "env"
@@ -84,23 +87,14 @@
             "ENV": {
               "Ref": "env"
             },
+            "MODULES": {
+              "Ref": "modules"
+            },
             "REGION": {
               "Ref": "AWS::Region"
             },
-            "API_OFSAPPLICATION_GRAPHQLAPIIDOUTPUT": {
-              "Ref": "apiofsapplicationGraphQLAPIIdOutput"
-            },
-            "API_OFSAPPLICATION_GRAPHQLAPIENDPOINTOUTPUT": {
-              "Ref": "apiofsapplicationGraphQLAPIEndpointOutput"
-            },
-            "GOOGLE_CLIENT_ID": {
-              "Ref": "googleClientId"
-            },
-            "GOOGLE_SECRET": {
-              "Ref": "googleSecret"
-            },
-            "REDIRECT_URI": {
-              "Ref": "redirectUri"
+            "GROUP": {
+              "Ref": "GROUP"
             }
           }
         },
@@ -111,8 +105,15 @@
           ]
         },
         "Runtime": "nodejs18.x",
-        "Layers": [],
-        "Timeout": 25
+        "Timeout": 25,
+        "Code": {
+          "S3Bucket": {
+            "Ref": "deploymentBucketName"
+          },
+          "S3Key": {
+            "Ref": "s3Key"
+          }
+        }
       }
     },
     "LambdaExecutionRole": {
@@ -121,12 +122,12 @@
         "RoleName": {
           "Fn::If": [
             "ShouldNotCreateEnvResources",
-            "ofsapplicationLambdaRole105af0db",
+            "ofsapplication4beb4f4bPostConfirmation",
             {
               "Fn::Join": [
                 "",
                 [
-                  "ofsapplicationLambdaRole105af0db",
+                  "ofsapplication4beb4f4bPostConfirmation",
                   "-",
                   {
                     "Ref": "env"
@@ -196,73 +197,6 @@
           ]
         }
       }
-    },
-    "AmplifyResourcesPolicy": {
-      "DependsOn": [
-        "LambdaExecutionRole"
-      ],
-      "Type": "AWS::IAM::Policy",
-      "Properties": {
-        "PolicyName": "amplify-lambda-execution-policy",
-        "Roles": [
-          {
-            "Ref": "LambdaExecutionRole"
-          }
-        ],
-        "PolicyDocument": {
-          "Version": "2012-10-17",
-          "Statement": [
-            {
-              "Effect": "Allow",
-              "Action": [
-                "appsync:GraphQL"
-              ],
-              "Resource": [
-                {
-                  "Fn::Join": [
-                    "",
-                    [
-                      "arn:aws:appsync:",
-                      {
-                        "Ref": "AWS::Region"
-                      },
-                      ":",
-                      {
-                        "Ref": "AWS::AccountId"
-                      },
-                      ":apis/",
-                      {
-                        "Ref": "apiofsapplicationGraphQLAPIIdOutput"
-                      },
-                      "/types/Query/*"
-                    ]
-                  ]
-                },
-                {
-                  "Fn::Join": [
-                    "",
-                    [
-                      "arn:aws:appsync:",
-                      {
-                        "Ref": "AWS::Region"
-                      },
-                      ":",
-                      {
-                        "Ref": "AWS::AccountId"
-                      },
-                      ":apis/",
-                      {
-                        "Ref": "apiofsapplicationGraphQLAPIIdOutput"
-                      },
-                      "/types/Mutation/*"
-                    ]
-                  ]
-                }
-              ]
-            }
-          ]
-        }
-      }
     }
   },
   "Outputs": {
@@ -279,11 +213,6 @@
         ]
       }
     },
-    "Region": {
-      "Value": {
-        "Ref": "AWS::Region"
-      }
-    },
     "LambdaExecutionRole": {
       "Value": {
         "Ref": "LambdaExecutionRole"
@@ -295,6 +224,11 @@
           "LambdaExecutionRole",
           "Arn"
         ]
+      }
+    },
+    "Region": {
+      "Value": {
+        "Ref": "AWS::Region"
       }
     }
   }
