--- a/amplify/backend/function/CalendarFunction/src/package.json
+++ b/amplify/backend/function/CalendarFunction/src/package.json
@@ -6,11 +6,13 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@googleapis/calendar": "^6.0.0",
+    "aws-sdk": "^2.1377.0",
     "aws-serverless-express": "^3.3.5",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "node-fetch": "2",
-    "rrule": "^2.7.2"
+    "rrule": "^2.7.2",
+    "dayjs": "^1.11.7"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.92"
